Use List.of to construct lists